feat: post page create and config, run tests e fix bugs

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,17 @@
 // TODO
+.container {
+  width: 1120px;
+  height: 105px;
+
+  display: flex;
+  align-items: center;
+
+  padding-left: 210px;
+  margin: 0 auto;
+
+
+}
+
+.container img {
+  width: 240px;
+}
