--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,7 +8,7 @@
 :root {
   --highlight: #FF57B2;
   --heading:  #F8F8F8;
-  --background: rgba(40, 44, 52, 0.83);
+  --background: #1A1D23;
   --body: #D7D7D7;
   --info: #BBBBBB;
 }
